--- a/client/games-project/package.json
+++ b/client/games-project/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "stream-chat": "^8.14.2",
+    "stream-chat-react": "^10.20.1",
     "tailwindcss": "^3.3.5",
     "universal-cookie": "^6.1.1"
   },
